Fixed Webkit Safari overflow/transform bugs

--- a/static/style.css
+++ b/static/style.css
@@ -159,6 +159,7 @@ html {
 	.c2a:hover {
 		background-image: linear-gradient(to top, rgba(0,0,0,0) 0, rgba(0,0,0,.7) 100%);
 		color: #fff;
+		text-shadow: 0 0 .25em #000;
 	}
 
 }
@@ -282,18 +283,16 @@ html {
 	#map .c2a {
 		overflow: hidden;
 		position: absolute;
+		z-index: 0; /* Safari Webkit fix */
 		bottom: 0;
 		right: 0;
-		height: 6.5em;
-		width: 6.5em;
+		height: 7em;
+		width: 7em;
+		border: .25em solid #bce4fa;
 		border-radius: 50%;
 	}
-	#map .box {
-		box-sizing: content-box;
-		border: .25em solid #bce4fa;
-	}
 	#map .c2a {
-		box-sizing: border-box;
+		margin: -.25em;
 		padding: 2em .125em 0;
 	}
 	#map .preview {
